# doredore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_REPORT.md  FINAL_SUMMARY.md  LICENSE  PHASE2_REPORT.md  PHASE3_REPORT.md  PRE_PUSH_CHECKLIST.md  PROJECT_STATUS.md  RAG_TECHNICAL_OVERVIEW.md  README.md  SEARCH_MODES_DESIGN.md  TODO.md  USAGE_EXAMPLES.md
doredore-core/: Cargo.toml
doredore-core/src/: error.rs  lib.rs
doredore-core/src/core/: collection.rs  database.rs  enricher.rs  mod.rs  search.rs
doredore-core/tests/: test_search_modes.rs  test_search_modes_english.rs
doredore-js/: Cargo.toml  index.d.ts  package.json
doredore-js/src/: lib.rs
doredore-py/: Cargo.toml  README.md  pyproject.toml
doredore-py/src/: lib.rs
doredore-rb/: Cargo.toml  README.md  doredore.gemspec
doredore-rb/lib/: doredore.rb
doredore-rb/src/: lib.rs
doredore-server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
doredore-server/src/: main.rs
doredore-server/static/: index.html
examples/nodejs/: basic.js  express_integration.js  with_openai.js
examples/nodejs/nextjs-api-route/pages/api/: chat.js  search.js
examples/python/: basic.py  csv_import.py  test_simple.py  with_openai.py
examples/ruby/: basic.rb  rails_controller.rb
rag-enricher-core/: Cargo.toml
rag-enricher-core/src/: lib.rs
rag-enricher-core/src/core/: embedding.rs  enricher.rs  mod.rs
rag-enricher-core/tests/: test_search_modes.rs  test_search_modes_english.rs
rag-enricher-js/: Cargo.toml  index.d.ts  package.json
rag-enricher-js/src/: lib.rs
rag-enricher-py/: Cargo.toml  README.md  pyproject.toml
rag-enricher-py/src/: lib.rs
rag-enricher-rb/: Cargo.toml  README.md  rag_enricher.gemspec
rag-enricher-rb/src/: lib.rs
rag-enricher-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
rag-enricher-server/src/: main.rs
rag-enricher-server/static/: index.html
