[workspace]
members = [
    "doredore-core",
    "doredore-py",
    "doredore-js",
    "doredore-rb",
    "doredore-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["doredore Contributors"]
license = "MIT"
repository = "https://github.com/0809android/doredore"

[workspace.dependencies]
# データベース
rusqlite = { version = "0.32", features = ["bundled"] }

# Embedding
fastembed = "4.1"

# Web サーバー
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# その他
csv = "1.3"

# Python バインディング
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
