[package]
name = "doredore-js"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-rs for Node.js bindings
napi = { version = "2.14", default-features = false, features = ["napi8", "async"] }
napi-derive = "2.14"

# Our core library
doredore-core = { path = "../doredore-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "=2.1.0"

[profile.release]
lto = true
strip = true
