[package]
name = "doredore-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doredore"
crate-type = ["cdylib"]

[dependencies]
doredore-core = { path = "../doredore-core" }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }
pythonize = "0.22"
serde_json = { workspace = true }

[build-dependencies]
