[package]
name = "rag-enricher-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rag_enricher"
crate-type = ["cdylib"]

[dependencies]
rag-enricher-core = { path = "../rag-enricher-core" }
pyo3 = { workspace = true }
tokio = { workspace = true }
pythonize = "0.22"
serde_json = { workspace = true }

[build-dependencies]
