[package]
name = "rag-enricher-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "rag-server"
path = "src/main.rs"

[dependencies]
# Our core library
rag-enricher-core = { path = "../rag-enricher-core" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Environment
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
